# veedor

./: .gitignore  Anchor.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/settlement-client/: Cargo.toml
crates/settlement-client/src/: attest.rs  canonical.rs  evaluate.rs  lib.rs  model.rs  schema.rs
crates/settlement-client/tests/: attest.rs  canonical.rs  evaluate.rs  machine_checkable.rs  model.rs  schema_validation.rs
crates/settlement-core/: Cargo.toml
crates/settlement-core/src/: lib.rs  proofs.rs
crates/settlement-core/tests/: attestation.rs  dispute.rs  invariants.proptest-regressions  invariants.rs  state_machine.rs  timeouts.rs  verified_witness.rs
crates/settlement-core/tests/common/: mod.rs
demo/: Cargo.toml
demo/src/: main.rs
programs/settlement/: Cargo.toml
programs/settlement/src/: contexts.rs  ed25519.rs  errors.rs  lib.rs  state.rs
programs/settlement/tests/: lifecycle.rs  release_attacks.rs  resolve.rs  smoke.rs  timeouts.rs
programs/settlement/tests/common/: mod.rs
research/x402-census/: RESULTS.md  census.py  sample-2026-07-20.json
services/mcp-settlement/: Cargo.toml
services/mcp-settlement/src/: lib.rs  main.rs  rpc.rs  store.rs  tools.rs
services/mcp-settlement/tests/: handshake.rs  lifecycle.rs  stdio_process.rs
services/x402-gateway/: Cargo.toml
services/x402-gateway/src/: lib.rs  main.rs  routes.rs  state.rs  store.rs  verifier.rs  x402.rs
services/x402-gateway/tests/: job_status.rs  payment_required.rs  payment_verification.rs  payment_verification_solana.rs
services/x402-gateway/tests/common/: mod.rs
spec/: evidence.schema.json  job-spec.schema.json
