[package]
name = "settlement-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Off-chain client library for agentic settlement: canonical hashing, schema validation, attestation/ruling signing, and evidence evaluation."

[dependencies]
settlement-core = { path = "../../crates/settlement-core" }
ed25519-dalek = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
jsonschema = { version = "0.30", default-features = false }
