[package]
name = "mcp-settlement"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stdio JSON-RPC 2.0 MCP server exposing the agentic-settlement job lifecycle (create_job, job_status, submit_evidence, release, dispute) as tools."

[dependencies]
settlement-core = { path = "../../crates/settlement-core" }
settlement-client = { path = "../../crates/settlement-client" }
ed25519-dalek = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.3"
