[package]
name = "x402-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "HTTP x402 payment gateway in front of the agentic-settlement job lifecycle: POST /jobs returns 402 with payment requirements derived from the job spec until a valid payment proof is presented, then creates and funds the job."

[dependencies]
settlement-core = { path = "../../crates/settlement-core" }
settlement-client = { path = "../../crates/settlement-client" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", default-features = false }
base64 = "0.22"
getrandom = "0.3"

# Same "solana-address"-based SDK generation `demo` pins, and for the same reason
# (see demo/Cargo.toml's comment): anchor-lang 0.32.1, and crates like `spl-token`
# that still depend on `solana-pubkey`, sit on an older, type-incompatible line.
# `SolanaPaymentVerifier` (src/verifier.rs) hand-decodes the one SPL Token
# instruction it needs instead of pulling in `spl-token` for the same reason `demo`
# hand-encodes instructions instead of using it.
solana-address = ">=2.2, <3"
solana-client = "3"
solana-commitment-config = "3"
solana-transaction = { version = "3.1", features = ["bincode", "verify"] }
bincode = "1.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

# Test-only: building and submitting a real SPL transfer against devnet for
# `tests/payment_verification_solana.rs`, the same way `demo` builds and submits its
# transactions (see that crate's Cargo.toml comment on this SDK generation).
solana-instruction = "3.4.0"
solana-keypair = "3.1.2"
solana-signer = "3.0.1"
solana-system-interface = { version = "2", features = ["bincode"] }
